# theo

files (1)/: CMakeLists.txt  README.md
files (1)/src/: GraphScene.cpp  GraphScene.h  MainWindow.cpp  MainWindow.h  main.cpp
files (1)/src/algorithms/: Hopcroft.cpp  Hopcroft.h
files (1)/src/io/: DFAJson.cpp  DFAJson.h
files (1)/src/items/: StateItem.cpp  StateItem.h  TransitionItem.cpp  TransitionItem.h
files (1)/src/model/: DFA.cpp  DFA.h
